# eos-event-recorder-daemon

./: .gitignore  .gitmodules  .mailmap  Makefile.am  README.md  autogen.sh  commit-msg  configure.ac  eosmetrics-0.pc.in  meson.build  meson_options.txt
.github/workflows/: ci.yml
daemon/: Makefile.am.inc  eins-boottime-source.c  eins-boottime-source.h  emer-aggregate-tally.c  emer-aggregate-tally.h  emer-aggregate-timer-impl.c  emer-aggregate-timer-impl.h  emer-boot-id-provider.c  emer-boot-id-provider.h  emer-cache-size-provider.c  emer-cache-size-provider.h  emer-cache-version-provider.c  emer-cache-version-provider.h  emer-circular-file.c  emer-circular-file.h  emer-daemon.c  emer-daemon.h  emer-gzip.c  emer-gzip.h  emer-image-id-provider.c  emer-image-id-provider.h  emer-machine-id-provider.c  emer-machine-id-provider.h  emer-main.c  emer-network-send-provider.c  emer-network-send-provider.h  emer-permissions-provider.c  emer-permissions-provider.h  emer-persistent-cache.c  emer-persistent-cache.h  emer-site-id-provider.c  emer-site-id-provider.h  emer-types.c  emer-types.h  meson.build
data/: Makefile.am.inc  cache-size.conf  com.endlessm.Metrics.conf  com.endlessm.Metrics.policy  com.endlessm.Metrics.service.in  com.endlessm.Metrics.xml  eos-metrics-event-recorder.service.in  eos-metrics-permissions.conf  eos-metrics-permissions.conf.in  eos-metrics-persistent-cache.conf.in  eos-metrics.conf.in  meson.build
debian/: changelog  control  copyright  eos-event-recorder-daemon.maintscript  eos-metrics-0-dev.install  eos-metrics-0-doc.install  eos-metrics-event-recorder.install  eos-metrics-tools.install  eos-metrics-tools.manpages  eos-metrics.doc-base  eos-send-metrics.1  gir1.2-eosmetrics-0.install  libeosmetrics-0-0.install  lintian-overrides  rules
docs/reference/eosmetrics/: .gitignore  Makefile.am  eosmetrics-docs.xml  eosmetrics-sections.txt  overview.xml
eosmetrics/: Makefile.am.inc  emtr-connection.c  emtr-connection.h  emtr-enums.h  emtr-event-recorder.c  emtr-event-recorder.h  emtr-event-types.c  emtr-event-types.h  emtr-mac-private.h  emtr-mac.c  emtr-machine-id-provider.c  emtr-machine-id-provider.h  emtr-macros.h  emtr-osversion-private.h  emtr-osversion.c  emtr-persistent-cache-private.h  emtr-persistent-cache.c  emtr-sender.c  emtr-sender.h  emtr-types.h  emtr-util-private.h  emtr-util.c  emtr-util.h  emtr-uuid-private.h  emtr-uuid.c  emtr-version.h  emtr-web-private.h  emtr-web.c  eosmetrics.h
m4/: ax-python-module-version.m4  ax-python-module.m4
shared/: Makefile.am.inc  emer-clock.c  emer-clock.h  emer-real-clock.c  emer-real-clock.h  meson.build  metrics-util.c  metrics-util.h
src/: metric_request_parser.c
system-helper/: 20-eos-metrics.rules  Makefile.am.inc  com.endlessm.MetricsSystemHelper.conf  com.endlessm.MetricsSystemHelper.policy  com.endlessm.MetricsSystemHelper.service  com.endlessm.MetricsSystemHelper.service.in  com.endlessm.MetricsSystemHelper.xml  eos-event-recorder-system-helper.c
tests/: Makefile.am.inc  launch-mock-dbus-tests.sh  meson.build  mockServer.js  run-tests.c  run-tests.h  test-connection.c  test-daemon-integration.py  test-event-recorder.c  test-event-types.c  test-mac.c  test-machine-id-provider.c  test-opt-out-integration.py  test-osversion.c  test-persistent-cache.c  test-sender.c  test-timers.py  test-util.c  test-uuid.c  test-web.c  testIntegration.js  wait-for-service-helper.py
tests/daemon/: mock-cache-size-provider.c  mock-cache-version-provider.c  mock-circular-file.c  mock-circular-file.h  mock-clock.c  mock-clock.h  mock-image-id-provider.c  mock-image-id-provider.h  mock-machine-id-provider.c  mock-machine-id-provider.h  mock-network-monitor.c  mock-network-monitor.h  mock-network-send-provider.c  mock-permissions-provider.c  mock-permissions-provider.h  mock-persistent-cache.c  mock-persistent-cache.h  mock-server.py  mock-site-id-provider.c  test-aggregate-tally.c  test-boot-id-provider.c  test-cache-size-provider.c  test-cache-version-provider.c  test-circular-file.c  test-daemon.c  test-gzip.c  test-machine-id-provider.c  test-network-send-provider.c  test-permissions-provider.c  test-persistent-cache.c
tests/smoke-tests/: event-types.js  smoke.js  smokeEventRecorder.js  smokeEventRecorderHeavyPayload.js  smokeLibrary.js  smokeOpenProgram.js  smokeProgram.js
tools/: Makefile.am.inc  eos-enable-metrics-uploading.in  eos-select-metrics-env.in  eos-send-metrics.in  eos-upload-metrics  meson.build  print-persistent-cache.c
